deployment/sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
          - containerPort: 1433
        volumeMounts:
          - name: sqlserver-storage
            mountPath: /var/opt/mssql
        # Diagnostic change: set to run as root temporarily
        securityContext:
          runAsUser: 0
          runAsGroup: 0
      volumes:
      - name: sqlserver-storage
        persistentVolumeClaim:
          claimName: sqlserver-pvc
