deployment/sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
spec:
  type: LoadBalancer  # Change to LoadBalancer for external access if needed.
  selector:
    app: sqlserver   # This should match the label in your Deployment.
  ports:
    - protocol: TCP
      port: 1433       # The port that will be exposed by the service.
      targetPort: 1433 # The port on which SQL Server is running in the container.
