deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lbe-prefix-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # capture everything after /lbe/ into $1 and forward as /$1
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /lbe/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: lbe-service
                port:
                  number: 80
          - path: /acs/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: acs-service
                port:
                  number: 80
